# datafowk

./: Cargo.toml  README.md  docker.sh  mysql_config.toml  mysql_to_mysql.sh  postgis_to_mysql.sh
ops/: mysql.compose.yaml  postgis_mysql.compose.yaml
ops/mysql/: Dockerfile.destination.mysql  Dockerfile.source.mysql  mysql_schema_destination.sql  mysql_schema_source.sql
ops/postgis/: Dockerfile.destination.mysql  Dockerfile.source.postgis  mysql_schema_destination.sql  postgis_schema_source.sql
projects/: postgis_config.toml
src/: cli.rs  config.rs  etl.rs  main.rs  ui.rs
src/enums/: mod.rs  modal.rs  modal_action.rs  rule_editor_mode.rs
src/etl/: config_io.rs  connect.rs  engine.rs  geometry.rs  mod.rs  run.rs  schema.rs  sql.rs  tests.rs  values.rs
src/etl_rule_parser/: parser.rs
src/models/: cli_options.rs  command.rs  data_value.rs  execution_summary.rs  field_reference.rs  mod.rs  rule_transform.rs  rules.rs  source_join.rs  table_column_schema.rs  table_schema.rs  ui_options.rs
src/transforms/: functions.rs  geometry.rs  mod.rs
src/ui/: app.rs  geometry_preview.rs  input.rs  mod.rs  panel_hint.rs  picker.rs  project_picker.rs  render.rs  render_dashboard.rs  render_editors.rs  render_help.rs  schema_preview.rs  state.rs  tests.rs  utils.rs
src/ui/enum/: connection_field.rs  connection_target.rs  mod.rs  modal.rs  pane.rs  rule_field.rs  schema_panel_state.rs  schema_side.rs  schema_zoom.rs
