[package]
name = "datafowk"
version = "0.1.0"
edition = "2021"


[dependencies]
nom = "7.1.3"
toml = "0.8.1"
mysql = "24.0.0"
postgres = { version = "0.19.13", features = ["with-chrono-0_4"] }
chrono = "0.4"
serde = { version = "1.0.188", features = ["derive"] }
ratatui = "0.27"
crossterm = "0.27"
clap = { version = "4.5", features = ["derive"] }
